Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
       </header>
       <section>
-        <p><strong>Simexon</strong> is a simulator for a targeted resequencing as generally known as exome sequencing. Simexon basically generates a set of (*artificial*) DNA fragments for next generation sequencing (NGS) read simulation. In the targeted resequencing, we constraint the genomic regions that are used to generated DNA fragments to be only a part of the entire genome; they are usually exons and/or a few introns and untranslated regions (UTRs).</p>
+        <h3>Simexon ( <em>Sim</em> ulator for <em>exon</em> targeted resequencing)</h3>
+
+<p><strong>Simexon</strong> is a simulator for a targeted resequencing as generally known as exome sequencing. Simexon basically generates a set of <em>artificial</em> DNA fragments for next generation sequencing (NGS) read simulation. In the targeted resequencing, we constraint the genomic regions that are used to generated DNA fragments to be only a part of the entire genome; they are usually exons and/or a few introns and untranslated regions (UTRs).</p>
 
 <h3>Welcome to GitHub Pages.</h3>
 
