--- a/index.html
+++ b/index.html
@@ -1,40 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Simexon by sak042</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Simexon : Simexon: A targeted resequencing (exome sequencing) simulator" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Simexon</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Simexon</h1>
-        <p class="header">Simexon: A targeted resequencing (exome sequencing) simulator</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/sak042/Simexon/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/sak042/Simexon/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/sak042/Simexon">View On GitHub</a></li>
-        </ul>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/sak042/Simexon">View on GitHub</a>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/sak042">sak042</a></p>
+          <h1 id="project_title">Simexon</h1>
+          <h2 id="project_tagline">Simexon: A targeted resequencing (exome sequencing) simulator</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/sak042/Simexon/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/sak042/Simexon/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      </header>
-      <section>
-        <h3>Simexon ( <em>Sim</em> ulator for <em>exon</em> targeted resequencing)</h3>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>Introduction</h3>
 
 <p><strong>Simexon</strong> is a simulator for a targeted resequencing as generally known as exome sequencing. Simexon basically generates a set of <em>artificial</em> DNA fragments for next generation sequencing (NGS) read simulation. In the targeted resequencing, we constraint the genomic regions that are used to generated DNA fragments to be only a part of the entire genome; they are usually exons and/or a few introns and untranslated regions (UTRs).</p>
 
-<h3>Welcome to GitHub Pages.</h3>
+<h3>Requirements</h3>
+
+<p>To run <strong>Simexon</strong>, the followings are required.</p>
+
+<h4>Input</h4>
+
+<ul>
+<li>
+<em>sample genome</em>: a faidx indexed FASTA format file of your sample genome sequence (e.g. hg19.fa).</li>
+<li>
+<em>target regions</em>: a set of designated genomic regions in either of the below formats:
+
+<ul>
+<li>ideal targets: a set of genomic coordinates <em>(chromosome, start, end)</em> in a tab-delimited BED file.</li>
+<li>probe sequences: </li>
+</ul>
+</li>
+</ul><h3>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
@@ -61,11 +79,17 @@ $ git checkout gh-pages
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Simexon maintained by <a href="https://github.com/sak042">sak042</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+    
+
   </body>
 </html>
