--- a/index.html
+++ b/index.html
@@ -1,45 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Simexon : Simexon: A targeted resequencing (exome sequencing) simulator" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Simexon by sak042</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Simexon</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Simexon</h1>
+        <p class="header">Simexon: A targeted resequencing (exome sequencing) simulator</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/sak042/Simexon">View on GitHub</a>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/sak042/Simexon/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/sak042/Simexon/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/sak042/Simexon">View On GitHub</a></li>
+        </ul>
 
-          <h1 id="project_title">Simexon</h1>
-          <h2 id="project_tagline">Simexon: A targeted resequencing (exome sequencing) simulator</h2>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/sak042">sak042</a></p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/sak042/Simexon/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/sak042/Simexon/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h3>Introduction</h3>
 
 <p><strong>Simexon</strong> is a simulator for a targeted resequencing as generally known as exome sequencing. Simexon basically generates a set of <em>artificial</em> DNA fragments for next generation sequencing (NGS) read simulation. In the targeted resequencing, we constraint the genomic regions that are used to generated DNA fragments to be only a part of the entire genome; they are usually exons and/or a few introns and untranslated regions (UTRs).</p>
 
 <h3>Install Simexon</h3>
 
-<p>To run Simexon, Python 2.7 or later is required. To install Python, go to <a href="http://python.org/">http://python.org/</a></p>
-
-<p>Download Simexon using the links in this page, or go to <a href="https://github.com/sak042/Simexon">https://github.com/sak042/Simexon</a></p>
+<p>Download Simexon using the links in this page, or go to <a href="https://github.com/sak042/Simexon">https://github.com/sak042/Simexon</a><br>
+To run Simexon, Python 2.7 or later is required. To install Python, go to <a href="http://python.org/">http://python.org/</a></p>
 
 <h3>Requirements</h3>
 
@@ -90,6 +88,8 @@
 &gt;python Simexon1.py -R ref.fa -B target.bed -n 1000000 -l 100 -M model.gzip -z -o result
 </code></pre>
 
+<p>This will generate <em>result.fastq.gz</em> (single-end mode / gzip compressed).</p>
+
 <p>For Simexon2:</p>
 
 <pre><code>
@@ -100,7 +100,41 @@
 # Run blat search to generate the match list
 &gt;python Prep_BlatSearch.py ref.2bit probe.txt.fa probe.txt.fa.psl
 # Run Simexon2 in probe hybridization mode.
-&gt;python Simexon2.py -R ref.fa -P probe.txt.fa -B probe_match.txt.fa.psl -n 1000000 -l 76 -M model.gzip -pz -o result2
+&gt;python Simexon2.py -R ref.fa -P probe.txt.fa -B probe_match.txt.fa.psl -n 1000000 -l 76 -M model.gzip -pz -o result
+</code></pre>
+
+<p>This will generate <em>result_1.fastq.gz</em> and <em>result_2.fastq.gz</em> (paired-end mode / gzip compressed).</p>
+
+<h3>Simexon Options</h3>
+
+<p>You can use '-h' for detailed help in command line.</p>
+
+<pre><code>Mandatory input files (for Simexon1 and Simexon2 in common):
+  -R FILE     faidx-indexed (R)eference genome FASTA file
+For Simexon1 only:
+  -B FILE     Target region .(B)ED file
+For Simexon2 only:
+  -P FILE     (P)robe sequence FASTA file
+  -B FILE     (B)lat matched probe regions .PSL file
+
+Parameters for exome capture:
+  -f INT      mean (f)ragment size. this corresponds to insert size when sequencing in paired-end mode. [200]
+  -d INT      standard (d)eviation of fragment size [50]
+  -m INT      (m)inimum fragment length [read_length + 20]
+  -x INT      slack margin of the given boundaries [0]
+
+Parameters for sequencing:
+  -p          generate paired-end reads [single]
+  -n INT      total (n)umber of reads
+  -l INT      read (l)ength (bp)
+  -M FILE     GemSim (M)odel file (.gzip)
+  -t INT      number of (t)hreaded subprocesses [1]
+
+Output options:
+  -o FILE     (o)utput file header. ".fastq.gz" or ".fastq" will be attached automatically. Output will be splitted into two files in paired-end mode
+  -z          compress output with g(z)ip [false]
+  -q INT      (q)uality score offset [33]
+  -v          (v)erbose; print out intermediate messages.
 </code></pre>
 
 <h3>Authors and Contributors</h3>
@@ -111,17 +145,11 @@
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Simexon maintained by <a href="https://github.com/sak042">sak042</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-
-    
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
