Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@ To run Wessim, Python 2.7 or later is required. To install Python, go to <a href
 </li>
 </ul><h3>Running Wessim</h3>
 
+<p>There are two main scripts in the package - Wessim1.py and Wessim2.py. You will use Wessim1 if you are using a BED file for target regions (ideal target approach). If you have probe sequences, use Wessim2. Two other scripts that start with 'Prep' are used to preparing Wessim2 inputs. You can ignore remaining scripts that start with '__sub'; main Wessim programs will execute these sub scripts automatically.</p>
+
 <p>The basic synopsis of Wessim1 is like below:</p>
 
 <pre><code>
